# reactguard

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  __init__.py  config.py  errors.py  log.py  pyproject.toml  runtime.py
cli/: __init__.py  main.py
compat/: __init__.py  adapters.py
framework_detection/: __init__.py  base.py  constants.py  engine.py  registry.py  scoring.py
framework_detection/frameworks/: __init__.py  expo.py  generic_rsc.py  nextjs.py  react_router.py  spa.py  waku.py
framework_detection/signals/: __init__.py  bundle.py  rsc.py  server_actions.py  waku.py
http/: __init__.py  adapters.py  client.py  httpx_client.py  models.py  retry.py  utils.py
models/: __init__.py  detection.py  http.py  poc.py  probe.py  report.py  scan.py
scan/: __init__.py  report.py  runner.py
src/reactguard/: __init__.py  config.py  errors.py  log.py  runtime.py  version.py
src/reactguard/cli/: __init__.py  main.py
src/reactguard/compat/: __init__.py  adapters.py
src/reactguard/framework_detection/: __init__.py  base.py  constants.py  engine.py  keys.py  nextjs_flight.py  registry.py  scoring.py
src/reactguard/http/: __init__.py  adapters.py  client.py  crawl.py  headers.py  heuristics.py  httpx_client.py  js.py  models.py  retry.py  url.py  utils.py
src/reactguard/models/: __init__.py  detection.py  http.py  poc.py  probe.py  report.py  scan.py
src/reactguard/rsc/: __init__.py  heuristics.py  nextjs.py  payloads.py  probes.py  runner.py  send.py  types.py
src/reactguard/scan/: __init__.py  engine.py  report.py  report_builder.py  runner.py
src/reactguard/utils/: __init__.py  actions.py  confidence.py  context.py  react_major.py  tag_manager.py  version.py  version_thresholds.py
src/reactguard/vulnerability_detection/: __init__.py  constants.py  engine.py  http.py  journal.py  plugin.py  policy.py  registry.py  runner.py  surface.py  (+1 more)
tests/: __init__.py
tests/unit/: __init__.py  test_action_id_discovery.py  test_assessors.py  test_attack_surface.py  test_cli_and_runtime.py  test_compat_adapters.py  test_config_and_errors.py  test_dec2025_caching.py  test_dec2025_helpers.py  test_framework_detection.py  test_framework_specific_interpreters.py  test_http_adapters_extra.py  test_http_layer.py  test_models_report.py  test_multi_action.py  test_multi_action_error_path.py  test_nextjs_flight.py  test_no_invoke_safety.py  test_proto_probe.py  test_react_major.py  test_rsc_payloads.py  test_rsc_signals.py  test_runtime.py  test_scan_runner.py  test_scoring.py  test_server_actions.py  test_server_actions_signals.py  test_signals_probes.py  test_snapshots.py  test_utils_core.py  test_vulnerability_assessors.py  test_vulnerability_core.py  test_vulnerability_interpreters.py  test_vulnerability_payloads.py
utils/: __init__.py  actions.py  tag_manager.py  version.py  version_thresholds.py
vulnerability_detection/: __init__.py  constants.py  http.py  journal.py  plugin.py  registry.py  runner.py  snapshots.py
vulnerability_detection/assessors/: __init__.py  base.py  expo.py  generic_rsc.py  nextjs.py  react_router.py  waku.py
vulnerability_detection/interpreters/: __init__.py  digest.py  multi_action.py  waku_interpreter.py
vulnerability_detection/payloads/: __init__.py  json_action_probe.py  proto_probe.py  runner.py  waku_probe.py
(+69 files in other folders)
