[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactguard"
version = "0.5.0"
description = "ReactGuard: React2Shell (CVE-2025-55182) scanner with framework + vulnerability detection for RSC stacks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Theori" }
]
dependencies = [
  "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "black>=23.0",
  "pyyaml>=6.0",
]

[project.scripts]
reactguard = "reactguard.cli.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["reactguard", "reactguard.*"]
exclude = ["reactguard.tests*"]

[tool.pytest.ini_options]
testpaths = ["reactguard/tests"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]

[tool.black]
line-length = 100
